# universal-driver

./: .clang-format  .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build_common.rs  codecov.yml  rust-toolchain.toml
.cargo/: config.toml
odbc/: Cargo.toml  README.md
odbc/src/: api.rs  c_api.rs  cdata_types.rs  extract.rs  lib.rs  read_arrow.rs  write_arrow.rs
odbc/src/api/: api_utils.rs  connection.rs  data.rs  diagnostic.rs  environment.rs  error.rs  handle_allocation.rs  mod.rs  sql_state.rs  statement.rs  types.rs  utils.rs
odbc/tests/: odbc_api_tests.rs
odbc_tests/: BehaviorDifferences.yaml  BreakingChanges.md  CMakeLists.txt  Dockerfile  run.sh  run_reference.sh  test.cpp
odbc_tests/common/: CMakeLists.txt
odbc_tests/common/include/: Connection.hpp  HandleWrapper.hpp  MetaOfSqlCTypes.hpp  Schema.hpp  compatibility.hpp  get_data.hpp  get_diag_rec.hpp  macros.hpp  put_get_utils.hpp  require.hpp  test_setup.hpp  utils.hpp
odbc_tests/common/src/: compatibility.cpp  get_diag_rec.cpp
odbc_tests/tests/: CMakeLists.txt
odbc_tests/tests/auth_tests/: CMakeLists.txt  pat.cpp  private_key.cpp
odbc_tests/tests/basic_tests/: CMakeLists.txt  test.cpp
odbc_tests/tests/bindings_tests/: CMakeLists.txt  test.cpp
odbc_tests/tests/datatype_tests/: CMakeLists.txt  number_tests.cpp  string_tests.cpp
odbc_tests/tests/e2e/: CMakeLists.txt
odbc_tests/tests/e2e/authentication/: private_key_auth.cpp
odbc_tests/tests/e2e/put_get/: put_get_auto_compress.cpp  put_get_basic_operations.cpp  put_get_overwrite.cpp  put_get_source_compression.cpp  put_get_wildcards.cpp
odbc_tests/tests/e2e/query/: large_result_set.cpp
odbc_tests/tests/e2e/tls/: crl_enabled.cpp
odbc_tests/tests/integration/: CMakeLists.txt
odbc_tests/tests/integration/authentication/: private_key_auth.cpp
odbc_tests/tests/large_result_tests/: CMakeLists.txt  test.cpp
odbc_tests/tests/put_get_tests/: CMakeLists.txt  test_put_get_auto_compress.cpp  test_put_get_overwrite.cpp  test_put_get_simple.cpp  test_put_get_source_compression.cpp  test_put_get_wildcards.cpp
pep249_dbapi/: BehaviorDifferences.yaml  BreakingChanges.md  Makefile  README.md  pyproject.toml  run_tests.sh  setup.py  tox.ini
pep249_dbapi/ci/reference_tests/: compare_reports.py
pep249_dbapi/pep249_dbapi/: __init__.py  connection.py  cursor.py  exceptions.py  types.py
pep249_dbapi/pep249_dbapi/api_client/: c_api.py  client_api.py  transport.py
pep249_dbapi/pep249_dbapi/protobuf_gen/: database_driver_v1_pb2.py
pep249_dbapi/pep249_dbapi/thrift_gen/database_driver_v1/: DatabaseDriver-remote  DatabaseDriver.py  __init__.py  ttypes.py
pep249_dbapi/tests/: README.md  __init__.py  compatibility.py  conftest.py  connector_factory.py  test_connection.py  test_cursor.py  test_exceptions.py  test_module.py  test_types.py  utils.py
pep249_dbapi/tests/e2e/authentication/: auth_helpers.py  test_pat.py  test_private_key_auth.py
pep249_dbapi/tests/e2e/put_get/: put_get_helper.py  test_put_get_auto_compress.py  test_put_get_basic_operations.py  test_put_get_overwrite.py  test_put_get_source_compression.py
pep249_dbapi/tests/e2e/tls/: test_crl_enabled.py
pep249_dbapi/tests/integ/: test_connection.py  test_cursor.py  test_put_get_auto_compress.py  test_put_get_overwrite.py  test_put_get_simple.py  test_put_get_source_compression.py  test_put_get_wildcards.py  utils_put_get.py
pep249_dbapi/tests/integ/authentication/: __init__.py  test_private_key_auth.py
pep249_dbapi/tests/unit/: test_module.py
sf_core/: Cargo.toml  README.md  build.rs
sf_core/src/: arrow_utils.rs  auth.rs  c_api.rs  chunks.rs  compression.rs  compression_types.rs  handle_manager.rs  lib.rs  query_types.rs  test_utils.rs  transport.rs
sf_core/src/api/: database_driver_v1.rs
sf_core/src/api_client/: handle_transport.rs  helpers.rs  mod.rs
sf_core/src/api_server/: arrow_utils.rs  database_driver_v1.rs  file_transfer.rs  mod.rs  query.rs
sf_core/src/apis/database_driver_v1/: connection.rs  database.rs  error.rs  global_state.rs  mod.rs  query.rs  statement.rs
sf_core/src/config/: mod.rs  rest_parameters.rs  retry.rs  settings.rs
sf_core/src/crl/: cache.rs  certificate_parser.rs  config.rs  disk_tests.rs  error.rs  integration_test.rs  mod.rs  validator.rs  worker.rs
sf_core/src/driver/: connection.rs  database.rs  mod.rs  settings.rs  statement.rs
sf_core/src/file_manager/: compression.rs  encryption.rs  file_transfer.rs  mod.rs  path_expansion.rs  types.rs
sf_core/src/http/: retry.rs
sf_core/src/logging/: callback_layer.rs  error.rs  mod.rs  opentelemetry.rs
sf_core/src/protobuf_apis/: database_driver_v1.rs  mod.rs
sf_core/src/protobuf_gen/: database_driver_v1.rs  mod.rs
sf_core/src/rest/: error.rs  mod.rs
sf_core/src/rest/snowflake/: async_exec.rs  auth.rs  data.rs  error.rs  mod.rs  payload.rs  query.rs  query_request.rs  query_response.rs
sf_core/src/thrift_apis/: database_driver_v1.rs  mod.rs
sf_core/src/thrift_apis/client/: mod.rs
sf_core/src/thrift_apis/server/: manager.rs  mod.rs  transport.rs
sf_core/src/thrift_gen/: database_driver_v1.rs  mod.rs
sf_core/src/tls/: client.rs  config.rs  crl_verifier.rs  error.rs  mod.rs  revocation.rs  test_helpers.rs  x509_utils.rs
sf_core/tests/: api_client_tests.rs  auth_tests.rs  http_retry_tests.rs  large_result_tests.rs  parameter_bind_tests.rs  put_get_auto_compress_tests.rs  put_get_overwrite_tests.rs  put_get_simple_tests.rs  put_get_source_compression_tests.rs  put_get_wildcards_tests.rs  test_utils.rs
sf_core/tests/.cursor/rules/: rust-test-rules.mdc  test-env-variable.mdc
sf_core/tests/common/: arrow_deserialize.rs  arrow_extract_value.rs  arrow_result_helper.rs  config.rs  file_utils.rs  mod.rs  private_key_helper.rs  put_get_common.rs  snowflake_test_client.rs  test_utils.rs  wiremock_client.rs
sf_core/tests/common/arrow_deserialize_macro/: Cargo.toml
sf_core/tests/e2e/: mod.rs
sf_core/tests/e2e/authentication/: mod.rs  pat.rs  private_key_auth.rs
sf_core/tests/e2e/http/: mod.rs
sf_core/tests/integration/: mod.rs
(+294 files in other folders)
