[package]
name = "odbc"
version = "0.1.0"
edition = "2024"

[lib]
name = "sfodbc"
crate-type = ["dylib", "rlib"]

[dependencies]
sf_core = { path = "../sf_core" }
thrift = "0.17.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1.0"
odbc-sys = "0.25.0"
lazy_static = "1.5.0"
arrow = { version = "55.1.0", features = ["ffi"] }

[[test]]
name = "odbc_api_tests"
