[package]
name = "odbc"
version = "0.1.0"
edition = "2024"

[lib]
name = "sfodbc"
crate-type = ["dylib", "rlib"]

[dependencies]
sf_core = { path = "../sf_core" }
thrift = "0.17.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
snafu = "0.8.7"
odbc-sys = "0.25.1"
lazy_static = "1.5.0"
arrow = { version = "56.0.0", features = ["ffi"] }

[[test]]
name = "odbc_api_tests"
