[package]
name = "sf_core"
edition = "2024"

[lib]
name = "sf_core"
crate-type = ["dylib", "rlib"]

[dependencies]
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", default-features = false, features = ["trace"] }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0" }
opentelemetry-semantic-conventions = { version = "0.30.0" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.9.1"
thrift = "0.17.0"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22.1"
arrow-ipc = "55.1.0"
arrow = { version = "55.1.0", features = ["ffi"] }
flate2 = "1.0"
openssl = "0.10"
jwt = { version = "0.16.0", features = ["openssl"] }
infer = "0.19.0"

# AWS SDK dependencies
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-credential-types = "1.0"
thiserror = "2.0.12"
glob = "0.3.2"

[dev-dependencies]
tempfile = "3.0"
arrow_deserialize_macro = { path = "tests/common/arrow_deserialize_macro" }
bzip2 = "0.4"
brotli = "6.0"
zstd = "0.13"